--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "types": [
-        "../backend/types"
+        "../SantaListBack-main/types"
       ]
     }
   }
